# asm-processor

./: Cargo.toml  MIGRATION.md  asm_processor.py  compile-test-rust.sh  llm.md  run-tests-rust.sh  run-tests.sh
asm_processor/asm/: function.py  processor.py
asm_processor/elf/: __init__.py  file.py  header.py  section.py
asm_processor/utils/: constants.py  errors.py  options.py
docs/: elf_api.md
processor/: __init__.py  objfile.py  processor.py
processor/asm/: __init__.py  block.py  function.py
processor/elf/: file.py  format.py  header.py  relocation.py  section.py  symbol.py
processor/utils/: __init__.py  constants.py  errors.py  state.py
src/: asm_processor.rs  lib.rs  objfile.rs  processor.rs
src/asm/: block.rs  function.rs  mod.rs
src/elf/: constants.rs  file.rs  format.rs  header.rs  mod.rs  relocation.rs  section.rs  symbol.rs
src/utils/: constants.rs  error.rs  mod.rs  options.rs  state.rs
